# mynotes

./: Cargo.toml  LICENSE  README.md  Rocket.toml  build.rs  config.yaml  index.html
src/: config.rs  index.rs  mail.rs  main.rs  markdown.rs  mdtree.rs  persist.rs  render.rs  settings.rs
src/config/: field_duration.rs
test/: Rocket.toml  lists_and_links.md
test/content/: basic_formatting.md  lists_and_links.md
test/content/static/: mynotes.js  style.css  template.html
test/content/sub/: code_tables_tasks.md
test/md/: basic_formatting.md
test/static/: style.css  template.html
test/sub/: code_tables_tasks.md
