[package]
name = "mynotes"
version = "0.1.0"
edition = "2024"
description = "Self-hosted website to publish personal notes, in markdown format"
keywords = ["webserver", "markdown"]
categories = ["web-programming::http-server"]
license = "MIT"
repository = "https://github.com/mic006/mynotes"

[dependencies]
base64 = "0.22.1"
pulldown-cmark = "0.13.4"
regex = { version = "1.12.3", default-features = false, features = [
    "std",
    "perf",
    "unicode-perl",
] }
rocket = { version = "0.5.1", features = ["json", "tls"] }
rocket_async_compression = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3.47"

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
let-underscore = "allow"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
unused = { level = "warn", priority = -1 }
unsafe_code = "deny"
dead_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# disable some **too** pedantic lints
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
missing_panics_doc = "allow"
doc_link_with_quotes = "allow"
trivially_copy_pass_by_ref = "allow"
